--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,14 +96,12 @@ body {
 
 ::-webkit-scrollbar-track {
     border-radius: 12px;
-    box-shadow: inset 0 0 6px white;
 }
 
 body::-webkit-scrollbar {
     width: 5px;
     height: 4px;
-    border-radius: 12px;
-    background: var(--black);
+    background: black;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -491,6 +489,20 @@ body::-webkit-scrollbar-thumb {
 
 .email-input-style-header::placeholder {
     color: var(--c-black-100);
+}
+
+.numberinput-header .numberinput-header::-webkit-outer-spin-button,
+.numberinput-header::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+.numberinput-header[type=number] {
+    -moz-appearance: textfield;
+}
+
+.px-10 {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .bg-number {
