--- a/assets/css/style7.css
+++ b/assets/css/style7.css
@@ -123,7 +123,12 @@
   max-height: 100%;
   max-width: 250px;
 }
+.benifit_gradient:hover {
+    border-radius: 12px;
+    padding: 1px;  max-width: 250px;
 
+    background: linear-gradient(171.68deg, #00ffe1 39.97%, #6e5df6 107.69%);
+  }
 .man_img {
   width: 72px;
   height: 72px;
@@ -140,7 +145,7 @@
 .accounts_card {
   padding: 20px;
   background: white;
-  max-width: 350px;
+  max-width: 250px;
   border-radius: 15px;
   transform: translateY(-10%);
 }
