--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -99,6 +99,50 @@ body::-webkit-scrollbar-thumb {
     filter: blur(89px);
 }
 
+.main-button {
+    padding: 12px 24px;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid white;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    transition: all 0.3s linear;
+}
+
+.main-button::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    background: linear-gradient(107.02deg, #00ffe1 12.76%, #6e5df6 91.81%);
+    opacity: 1;
+}
+
+.main-button::before {
+    content: "";
+    height: 100%;
+    width: 10px;
+    position: absolute;
+    left: -25%;
+    top: 0;
+    transform: skew(10deg);
+    z-index: 0;
+    filter: blur(5px);
+    background: white;
+    opacity: 1;
+    transition: all .3s linear;
+}
+
+.main-button:hover::before {
+    left: 125% !important;
+
+}
+
+.main-button:hover::after {
+    background: linear-gradient(107.02deg, #6e5df6 12.76%, #00ffe1 91.81%);
+}
+
 .mb-45 {
     margin-bottom: 45px;
 }
