--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1038,6 +1038,7 @@ body::-webkit-scrollbar-thumb {
     height: 356px;
     background: linear-gradient(171.68deg, #00ffe1 39.97%, #6e5df6 107.69%);
     filter: blur(140px);
+    pointer-events: none;
 }
 
 .Statistics_ellips2 {
@@ -1049,6 +1050,7 @@ body::-webkit-scrollbar-thumb {
     height: 356px;
     background: linear-gradient(171.68deg, #00ffe1 39.97%, #6e5df6 107.69%);
     filter: blur(140px);
+    pointer-events: none;
 }
 
 .Statistics_ellips3 {
@@ -1060,15 +1062,12 @@ body::-webkit-scrollbar-thumb {
     height: 356px;
     background: linear-gradient(171.68deg, #00ffe1 39.97%, #6e5df6 107.69%);
     filter: blur(140px);
-}
-
-.mb_2 {
-    margin-bottom: -2px;
+    pointer-events: none;
 }
 
 .border_Statistics {
     border-radius: 100%;
-    background: #FFFFFF0D;
+    background: transparent !important;
     width: 220px;
     height: 220px;
     backdrop-filter: blur(31.478700637817383px);
