--- a/assets/css/style7.css
+++ b/assets/css/style7.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-
 :root {
   /*=========font-size========*/
   --fs-xs: 16px;
@@ -77,8 +76,12 @@
 .green-2d {
   color: var(--green-2d);
 }
-
-
+.font-gradient {
+  background: linear-gradient(180.02deg, #00ffe1 12.76%, #6e5df6 91.81%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 .ellipse_1 {
   width: 300px;
   height: 190px;
@@ -86,7 +89,7 @@
   filter: blur(144px);
   z-index: -1;
   top: 8%;
-  left: -13%;
+  left: -13% !important;
 }
 
 .ellipse_2 {
@@ -96,7 +99,7 @@
   filter: blur(130px);
   z-index: -1;
   bottom: 24%;
-  right: -10%;
+  right: -25% !important;
 }
 .ellipse_3 {
   width: 100px;
@@ -105,7 +108,7 @@
   filter: blur(130px);
   z-index: -1;
   top: 11%;
-  right: -10%;
+  right: -10% !important;
 }
 .trade_btn {
   padding: 8px;
@@ -117,18 +120,20 @@
   margin-bottom: 10px;
 }
 .benifit_card {
-  transition: all 0.4s linear;
   padding: 30px 10.5px 30px 10.5px;
   height: 200px !important;
   max-height: 100%;
   max-width: 250px;
 }
-.benifit_gradient:hover {
-    border-radius: 12px;
-    padding: 1px;  max-width: 250px;
 
-    background: linear-gradient(171.68deg, #00ffe1 39.97%, #6e5df6 107.69%);
-  }
+.benifit_gradient {
+  padding: 1px;
+}
+.benifit_gradient:hover {
+  border-radius: 12px;
+  max-width: 250px;
+  background: linear-gradient(171.68deg, #00ffe1 39.97%, #6e5df6 107.69%);
+}
 .man_img {
   width: 72px;
   height: 72px;
@@ -139,13 +144,13 @@
   width: 524px;
   max-width: 100%;
   min-height: 260px;
-  padding: 20px 20px 50px 20px;
+  padding: 20px 20px 60px 20px !important;
   background: linear-gradient(82.41deg, #00ffe1 -12.77%, #6e5df6 93.08%);
 }
 .accounts_card {
   padding: 20px;
   background: white;
-  max-width: 250px;
+  max-width: 310px;
   border-radius: 15px;
   transform: translateY(-10%);
 }
@@ -153,7 +158,7 @@
   border-radius: 10px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 576px) {
   .accounts_card {
     max-width: 471px;
   }
