--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -18,6 +18,24 @@ body::-webkit-scrollbar-thumb {
     margin-top: 24px;
 }
 
+#submit {
+    pointer-events: none;
+    cursor: no-drop;
+}
+
+.man-profile-card {
+    transition: all .3s linear;
+}
+
+.man-profile-card:hover {
+    box-shadow: 0 0 3px 3px var(--c-light-green);
+}
+
+#headerfrom:valid #submit {
+    pointer-events: auto;
+    cursor: pointer;
+}
+
 .box-timenumber::after {
     content: '';
     position: absolute;
@@ -49,7 +67,6 @@ body::-webkit-scrollbar-thumb {
     border-radius: 7.2px;
     background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
 }
-
 .ellipes1headerleft-top {
     position: absolute;
     z-index: -1;
@@ -159,6 +176,41 @@ body::-webkit-scrollbar-thumb {
     filter: blur(115px);
 }
 
+.slide_container {
+    width: calc(389px * 12);
+    -webkit-animation: scroll 15s linear infinite;
+    animation: scroll 15s linear infinite;
+}
+
+.logo_gap {
+    gap: 20px;
+}
+
+@-webkit-keyframes scroll {
+    0% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+
+    100% {
+        -webkit-transform: translateX(calc(-244px * 6));
+        transform: translateX(calc(-244px * 6));
+    }
+}
+
+.logo_size {
+    width: 367px;
+    height: 126px !important;
+}
+
+@media (min-width:1526px) {
+    .slide_container {
+        width: calc(244px * 12);
+        -webkit-animation: scroll 15s linear infinite;
+        animation: scroll 15s linear infinite;
+    }
+}
+
 @media (max-width:576px) {
     .nav-small-screen {
         padding: 6px 16px !important;
@@ -187,12 +239,12 @@ body::-webkit-scrollbar-thumb {
 }
 
 @media (min-width:992px) {
-    .max-w-lg-388 {
-        max-width: 388px;
-    }
-
     .vedio {
         margin: 0 12px;
+    }
+
+    .max-w-lg-626 {
+        max-width: 626px;
     }
 
     .mt_0 {
@@ -203,5 +255,18 @@ body::-webkit-scrollbar-thumb {
 @media (min-width:1200px) {
     .mb-xl-100 {
         margin-bottom: 100px;
+    }
+
+    .max-w-xl-388 {
+        max-width: 388px;
+    }
+
+    .px-xl-44 {
+        padding-left: 44px;
+        padding-right: 44px;
+    }
+
+    .max-w-xl-654 {
+        max-width: 654px;
     }
 }
