--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -887,10 +887,12 @@ body::-webkit-scrollbar-thumb {
 
 .benifit_gradient {
     padding: 1px;
+    transition: all 300ms linear;
 }
 
 .benifit_gradient:hover {
     border-radius: 12px;
+    transform: scale(1.05);
     max-width: 250px;
     background: linear-gradient(171.68deg, #00ffe1 39.97%, #6e5df6 107.69%);
 }
