--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1153,11 +1153,62 @@ body::-webkit-scrollbar-thumb {
 }
 
 /*--============Average-Earnings==============--> */
-.average_img {
+
+.px_6 {
+    padding-left: 6px;
+    padding-right: 6px;
+}
+
+.slide_container {
+    width: calc(360px * 4);
+    -webkit-animation: scroll 20s linear infinite;
+    animation: scroll 10s linear infinite;
+}
+
+.gap_32 {
+    gap: 32px;
+}
+
+@-webkit-keyframes scroll {
+    0% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+
+    100% {
+        -webkit-transform: translateX(calc(-360px * 2));
+        transform: translateX(calc(-360px * 2));
+    }
+}
+
+.slide_container2 {
+    width: calc(360px * 8);
+    -webkit-animation: scroll 20s linear infinite;
+    animation: scrolltwo 6s linear infinite;
+}
+
+@-webkit-keyframes scrolltwo {
+    0% {
+        -webkit-transform: translateX(-360px);
+        transform: translateX(-360px);
+    }
+
+    100% {
+        -webkit-transform: translateX(calc(0px * 4));
+        transform: translateX(calc(0px * 4));
+    }
+}
+
+.mw_210 {
+    max-width: 210px;
+}
+
+
+.social_img {
     transition: all 300ms linear;
 }
 
-.average_img:hover {
+.social_img:hover {
     transform: scale(0.9);
 }
 
@@ -2025,6 +2076,9 @@ numberinput-header .numberinput-header[type=number] {
 }
 
 @media (min-width:992px) {
+    .mw_814 {
+        max-width: 814px;
+    }
 
     .mw_lg_629 {
         max-width: 629px !important;
